--- a/helm/linkerd2-app/templates/grafana-rbac.yaml
+++ b/helm/linkerd2-app/templates/grafana-rbac.yaml
@@ -1,4 +1,3 @@
-{{with .Values -}}
 ---
 ###
 ### Grafana RBAC
@@ -8,8 +7,7 @@ kind: ServiceAccount
 apiVersion: v1
 metadata:
   name: linkerd-grafana
-  namespace: {{.Namespace}}
+  namespace: {{.Values.global.namespace}}
   labels:
-    {{.ControllerComponentLabel}}: grafana
-    {{.ControllerNamespaceLabel}}: {{.Namespace}}
-{{- end }}
+    {{.Values.global.controllerComponentLabel}}: grafana
+    {{.Values.global.controllerNamespaceLabel}}: {{.Values.global.namespace}}
