--- a/helm/linkerd2-app/templates/serviceprofile-crd.yaml
+++ b/helm/linkerd2-app/templates/serviceprofile-crd.yaml
@@ -1,4 +1,3 @@
-{{with .Values -}}
 ---
 ###
 ### Service Profile CRD
@@ -9,9 +8,9 @@ kind: CustomResourceDefinition
 metadata:
   name: serviceprofiles.linkerd.io
   annotations:
-    {{.CreatedByAnnotation}}: {{default (printf "linkerd/helm %s" .LinkerdVersion) .CliVersion}}
+    {{.Values.global.createdByAnnotation}}: {{default (printf "linkerd/helm %s" .Values.global.linkerdVersion) .Values.global.cliVersion}}
   labels:
-    {{.ControllerNamespaceLabel}}: {{.Namespace}}
+    {{.Values.global.controllerNamespaceLabel}}: {{.Values.global.namespace}}
 spec:
   group: linkerd.io
   versions:
@@ -28,4 +27,3 @@ spec:
     kind: ServiceProfile
     shortNames:
     - sp
-{{ end -}}
