--- a/helm/linkerd2-app/templates/hook-post-delete-remove-certs.yaml
+++ b/helm/linkerd2-app/templates/hook-post-delete-remove-certs.yaml
@@ -4,7 +4,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
 metadata:
   name: linkerd-janitor
-  namespace: {{ .Namespace }}
+  namespace: {{ .global.namespace }}
   annotations:
     "helm.sh/hook": "post-delete"
     "helm.sh/hook-weight": "-5"
@@ -33,7 +33,7 @@ rules:
   resources:
   - namespaces
   resourceNames:
-  - {{ .Namespace }}
+  - {{ .global.namespace }}
   verbs:
   - delete
 - apiGroups:
@@ -65,7 +65,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: linkerd-janitor
-  namespace: {{ .Namespace }}
+  namespace: {{ .global.namespace }}
   annotations:
     "helm.sh/hook": "post-delete"
     "helm.sh/hook-weight": "-5"
@@ -77,7 +77,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
 metadata:
   name: linkerd-janitor
-  namespace: {{ .Namespace }}
+  namespace: {{ .global.namespace }}
   annotations:
     "helm.sh/hook": "post-delete"
     "helm.sh/hook-weight": "-4"
@@ -87,7 +87,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: linkerd-janitor
-    namespace: {{ .Namespace }}
+    namespace: {{ .global.namespace }}
 roleRef:
   kind: Role
   name: linkerd-janitor
@@ -97,7 +97,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: linkerd-janitor
-  namespace: {{ .Namespace }}
+  namespace: {{ .global.namespace }}
   annotations:
     "helm.sh/hook": "post-delete"
     "helm.sh/hook-weight": "-3"
@@ -117,13 +117,13 @@ spec:
         - -e
         - -c
         - >-
-          kubectl -n {{ .Namespace }} delete configmap linkerd-config;
-{{- if and (.Identity.Issuer) (eq .Identity.Issuer.Scheme "linkerd.io/cert-manager") }}
-          kubectl -n {{ .Namespace }} delete issuer linkerd-selfsigning-issuer;
-          kubectl -n {{ .Namespace }} delete certificate linkerd-identity-issuer;
-          kubectl -n {{ .Namespace }} delete secret linkerd-identity-issuer;
+          kubectl -n {{ .global.namespace }} delete configmap linkerd-config;
+{{- if and (.identity.issuer) (eq .identity.issuer.scheme "linkerd.io/cert-manager") }}
+          kubectl -n {{ .global.namespace }} delete issuer linkerd-selfsigning-issuer;
+          kubectl -n {{ .global.namespace }} delete certificate linkerd-identity-issuer;
+          kubectl -n {{ .global.namespace }} delete secret linkerd-identity-issuer;
 {{- end }}
-          kubectl delete ns {{ .Namespace }};
+          kubectl delete ns {{ .global.namespace }};
       restartPolicy: Never
   backoffLimit: 6
 {{- end -}}
