--- a/helm/linkerd2-app/Chart.yaml
+++ b/helm/linkerd2-app/Chart.yaml
@@ -13,9 +13,9 @@ maintainers:
   url: https://linkerd.io/
 - name: Giant Swarm applications team
   url: https://github.com/giantswarm/linkerd2-app
-name: linkerd2
+name: linkerd2-app
 sources:
 - https://github.com/linkerd/linkerd2/
 - https://github.com/giantswarm/linkerd2-app
 version: [[ .Version ]]
-#version: 2.7.1
+  #version: 2.7.1
