--- a/helm/linkerd2-app/templates/hook-pre-install-annotate-namespace.yaml
+++ b/helm/linkerd2-app/templates/hook-pre-install-annotate-namespace.yaml
@@ -1,5 +1,4 @@
 ---
-{{ $Namespace := .Release.Namespace }}
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
 metadata:
@@ -78,7 +77,7 @@ spec:
         - -x
         - -c
         - >-
-          kubectl annotate --overwrite ns {{ .Release.Namespace }} {{.Values.global.proxyInjectAnnotation}}={{.Values.global.proxyInjectDisabled}}
+          kubectl annotate --overwrite ns {{ .Release.Namespace }} {{.Values.global.proxyInjectAnnotation}}={{.Values.global.proxyInjectDisabled}};
           kubectl label --overwrite ns {{ .Release.Namespace }} {{.Values.global.linkerdNamespaceLabel}}="true";
           kubectl label --overwrite ns {{ .Release.Namespace }} config.linkerd.io/admission-webhooks=disabled;
       restartPolicy: Never
