--- a/helm/linkerd2-app/templates/hook-pre-install-identity-certs.yaml
+++ b/helm/linkerd2-app/templates/hook-pre-install-identity-certs.yaml
@@ -1,17 +1,16 @@
-{{with .Values -}}
-{{if .Identity -}}
-{{if and (.Identity.Issuer) (eq .Identity.Issuer.Scheme "linkerd.io/cert-manager") -}}
+{{if .Values.identity -}}
+{{if and (.Values.identity.issuer) (eq .Values.identity.issuer.scheme "linkerd.io/cert-manager") -}}
 ---
 apiVersion: certmanager.k8s.io/v1alpha1
 kind: Issuer
 metadata:
   name: linkerd-selfsigning-issuer
-  namespace: {{.Namespace}}
+  namespace: {{.Release.Namespace}}
   labels:
-    {{.ControllerComponentLabel}}: identity
-    {{.ControllerNamespaceLabel}}: {{.Namespace}}
+    {{.Values.global.controllerComponentLabel}}: identity
+    {{.Values.global.controllerNamespaceLabel}}: {{.Release.Namespace}}
   annotations:
-    {{.CreatedByAnnotation}}: {{default (printf "linkerd/helm %s" .LinkerdVersion) .CliVersion}}
+    {{.Values.global.createdByAnnotation}}: {{ printf "linkerd/helm %s" .Values.global.linkerdVersion }}
     "helm.sh/hook": pre-install
     "helm.sh/hook-weight": "-5"
 spec:
@@ -21,21 +20,20 @@ apiVersion: certmanager.k8s.io/v1alpha1
 kind: Certificate
 metadata:
   name: linkerd-identity-issuer
-  namespace: {{.Namespace}}
+  namespace: {{.Release.Namespace}}
   labels:
-    {{.ControllerComponentLabel}}: identity
-    {{.ControllerNamespaceLabel}}: {{.Namespace}}
+    {{.Values.global.controllerComponentLabel}}: identity
+    {{.Values.global.controllerNamespaceLabel}}: {{.Release.Namespace}}
   annotations:
-    {{.CreatedByAnnotation}}: {{default (printf "linkerd/helm %s" .LinkerdVersion) .CliVersion}}
+    {{.Values.global.createdByAnnotation}}: {{ printf "linkerd/helm %s" .Values.global.linkerdVersion }}
     "helm.sh/hook": pre-install
     "helm.sh/hook-weight": "-5"
 spec:
   secretName: linkerd-identity-issuer
-  commonName: identity.{{.Namespace}}.{{.ClusterDomain}}
+  commonName: identity.{{.Release.Namespace}}.{{.Values.global.clusterDomain}}
   isCA: true
   keyAlgorithm: ecdsa
   issuerRef:
     name: linkerd-selfsigning-issuer
-{{- end}}
 {{- end}}
 {{- end}}
