--- a/helm/linkerd2-app/templates/hook-pre-install-linkerd-config.yaml
+++ b/helm/linkerd2-app/templates/hook-pre-install-linkerd-config.yaml
@@ -3,12 +3,12 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: linkerd-config
-  namespace: {{.Values.global.namespace}}
+  namespace: {{.Release.Namespace}}
   labels:
     {{.Values.global.controllerComponentLabel}}: controller
-    {{.Values.global.controllerNamespaceLabel}}: {{.Values.global.namespace}}
+    {{.Values.global.controllerNamespaceLabel}}: {{.Release.Namespace}}
   annotations:
-    {{.Values.global.createdByAnnotation}}: {{default (printf "linkerd/helm %s" .Values.global.linkerdVersion) .Values.global.cliVersion}}
+    {{.Values.global.createdByAnnotation}}: {{printf "linkerd/helm %s" .Values.global.linkerdVersion}}
     "helm.sh/hook": pre-install
     "helm.sh/hook-weight": "-4"
 data:
