--- a/helm/linkerd2-app/templates/hook-pre-install-update-config-with-cert-job.yaml
+++ b/helm/linkerd2-app/templates/hook-pre-install-update-config-with-cert-job.yaml
@@ -1,12 +1,11 @@
-{{with .Values -}}
-{{if .Identity -}}
-{{if and (.Identity.Issuer) (eq .Identity.Issuer.Scheme "linkerd.io/cert-manager") -}}
+{{if .Values.identity -}}
+{{if and (.Values.identity.issuer) (eq .Values.identity.issuer.scheme "linkerd.io/cert-manager") -}}
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
 metadata:
   name: global-config-creator
-  namespace: {{ .Namespace }}
+  namespace: {{ .Release.Namespace }}
   annotations:
     "helm.sh/hook": "pre-install"
     "helm.sh/hook-weight": "-5"
@@ -37,7 +36,7 @@ rules:
   resources:
   - podsecuritypolicies
   resourceNames:
-  - linkerd-{{ .Namespace }}-control-plane
+  - linkerd-{{ .Release.Namespace }}-control-plane
   verbs:
   - "use"
 ---
@@ -45,7 +44,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: global-config-creator
-  namespace: {{ .Namespace }}
+  namespace: {{ .Release.Namespace }}
   annotations:
     "helm.sh/hook": "pre-install"
     "helm.sh/hook-weight": "-5"
@@ -57,7 +56,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
 metadata:
   name: global-config-creator
-  namespace: {{ .Namespace }}
+  namespace: {{ .Release.Namespace }}
   annotations:
     "helm.sh/hook": "pre-install"
     "helm.sh/hook-weight": "-4"
@@ -67,18 +66,18 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: global-config-creator
-    namespace: {{ .Namespace }}
+    namespace: {{ .Release.Namespace }}
 roleRef:
   kind: Role
   name: global-config-creator
-  namespace: {{ .Namespace }}
+  namespace: {{ .Release.Namespace }}
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: batch/v1
 kind: Job
 metadata:
   name: global-config-creator
-  namespace: {{ .Namespace }}
+  namespace: {{ .Release.Namespace }}
   annotations:
     "helm.sh/hook": "pre-install"
     "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
@@ -90,8 +89,8 @@ spec:
       serviceAccountName: global-config-creator
       containers:
       - name: global-config-creator
-        image: "{{ .kubectlImage.registry }}/{{ .kubectlImage.name }}:{{ .kubectlImage.tag }}"
-        imagePullPolicy: "{{ .kubectlImage.pullPolicy }}"
+        image: "{{ .Values.kubectlImage.registry }}/{{ .Values.kubectlImage.name }}:{{ .Values.kubectlImage.tag }}"
+        imagePullPolicy: "{{ .Values.kubectlImage.pullPolicy }}"
         command:
         - /bin/sh
         - -e
@@ -99,7 +98,7 @@ spec:
         - -c
         - >-
           while true; do 
-              export CERT=`kubectl -n {{ .Namespace }} get secret linkerd-identity-issuer -o jsonpath="{.data['ca\.crt']}" | base64 -d`;
+              export CERT=`kubectl -n {{ .Release.Namespace }} get secret linkerd-identity-issuer -o jsonpath="{.data['ca\.crt']}" | base64 -d`;
               if [ $? -eq 0 ] && [ ! -z "$CERT" ]; then 
                   break; 
               fi; 
@@ -107,7 +106,7 @@ spec:
               sleep 1; 
           done; 
           while true; do 
-              kubectl -n {{ .Namespace }} get cm linkerd-config -o yaml --export > /tmp/config.yaml; 
+              kubectl -n {{ .Release.Namespace }} get cm linkerd-config -o yaml --export > /tmp/config.yaml; 
               if [ $? -eq 0 ]; then 
                   break; 
               fi; 
@@ -115,9 +114,8 @@ spec:
               sleep 1; 
           done; 
           awk -v CERT="$CERT" 'BEGIN{gsub("\n", "\\n", CERT)}; {gsub("REPLACE_ME", CERT);print $0}' /tmp/config.yaml > /tmp/config-out.yaml;
-          kubectl -n {{ .Namespace }} replace configmap linkerd-config -f /tmp/config-out.yaml;
+          kubectl -n {{ .Release.Namespace }} replace configmap linkerd-config -f /tmp/config-out.yaml;
       restartPolicy: Never
   backoffLimit: 6
-{{- end}}
 {{- end}}
 {{- end}}
